--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build
         run: pnpm build --base /REG
 
+      - name: Add 404 page
+        run: cp 404.html dist/404.html
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
